--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -1,4 +1,5 @@
-    <title>Timetool - Kunden</title>
+  
+<title>Timetool - Kunden</title>
 {{!-- Body --}}
 <div class="container-fluid m-0 py-3 px-2 fillHeight bg-white rounded">
   {{!-- Header --}}
@@ -12,13 +13,14 @@
       {{!-- Tablehead --}}
       <thead>
         <tr>
-            <th scope="col" class="col-2 col-md-2">Nachname</th>
-            <th scope="col" class="col-2 col-md-2">Vorname</th> 
-            <th scope="col" class="col-2 col-md-2">Straße</th>
-            <th scope="col" class="col-1 col-md-1">Hausnr.</th>
-            <th scope="col" class="col-1 col-md-1">PLZ</th>
-            <th scope="col" class="col-2 col-md-2">Stadt</th>
-            <th scope="col" class="col-2 col-md-2">&nbsp;</th>
+            <th scope="col" class="col-2">Firma</th>
+            <th scope="col" class="col-2">Nachname</th>
+            <th scope="col" class="col-2">Vorname</th> 
+            <th scope="col" class="col-1">Straße</th>
+            <th scope="col" class="col-1 ">Hausnr.</th>
+            <th scope="col" class="col-1 ">PLZ</th>
+            <th scope="col" class="col-1">Stadt</th>
+            <th scope="col" class="col-2">Erstellt</th>
         </tr>
       </thead>
     
@@ -26,15 +28,17 @@
       <tbody data-simplebar> 
         {{#each customers}}
           <tr class="d-flex">
-            <td class="col-2 col-md-2 d-flex align-content-stretch">{{surname}}</td>
-            <td class="col-2 col-md-2 d-flex align-content-stretch">{{firstname}}</td>
-            <td class="col-2 col-md-2 d-flex align-content-stretch">{{street}}</td>
-            <td class="col-1 col-md-1 d-flex align-content-stretch">{{housenum}}</td>
-            <td class="col-1 col-md-1 d-flex align-content-stretch">{{zipcode}}</td>
-            <td class="col-2 col-md-2 d-flex align-content-stretch">{{city}}</td>
-
-            <td class="col-2 col-md-2 d-flex align-content-stretch justify-content-end">
+            <td class="col-2 d-flex align-content-stretch">{{textFix company}}</td>
+            <td class="col-2 d-flex align-content-stretch">{{surname}}</td>
+            <td class="col-2 d-flex align-content-stretch">{{firstname}}</td>
+            <td class="col-1 d-flex align-content-stretch">{{street}}</td>
+            <td class="col-1 d-flex align-content-stretch">{{housenum}}</td>
+            <td class="col-1 d-flex align-content-stretch">{{zipcode}}</td>
+            <td class="col-1 d-flex align-content-stretch">{{city}}</td>
+            <td class="col-1 d-flex align-content-stretch">{{dateFix created_at}}</td>
+            <td class="col-1 d-flex align-content-stretch justify-content-end">
               <a href="javascript:void(0);" class="btn mdi mdi-pencil-outline py-0 shadow-none editBtn"  
+                data-company="{{ company }}" 
                 data-id="{{ id }}"
                 data-surname="{{ surname }}" 
                 data-firstname="{{ firstname }}" 
@@ -54,7 +58,7 @@
 
 {{!-- Modals --}}
 
-{{!-- Modal to add Employee --}}
+{{!-- add customer --}}
 <form action="/submit-form" method="POST">
     <div id="addModal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog">
@@ -65,6 +69,7 @@
                 </div>
                 <div class="modal-body">      
                     <input type="hidden" name="tablename" value="customers"/>
+                    <input class="form-control mb-2" type="text" name="company" placeholder="Firma(optional)" />
                     <input class="form-control mb-2" type="text" name="surname" placeholder="Nachname" required />
                     <input class="form-control mb-2" type="text" name="firstname" placeholder="Vorname" required />
                     <input class="form-control mb-2" type="text" name="street" placeholder="Straße" required />
@@ -84,7 +89,7 @@
     </div>
 </form>
 
-<!-- Edit Modal-->
+{{!-- edit customer --}}
 <form action="/update" method="post">
     <div class="modal fade" id="EditModal" tabindex="-1" role="dialog">
         <div class="modal-dialog">
@@ -94,6 +99,7 @@
                     <h3 class="close mdi mdi-close m-0 p-1" data-dismiss="modal"></h3>
                 </div>
                 <div class="modal-body">
+                    <input class="form-control mb-2 company" type="text" name="company" placeholder="Firma(optional)" />
                     <input class="form-control mb-2 surname" type="text" name="surname" placeholder="Nachname" required />
                     <input class="form-control mb-2 firstname" type="text" name="firstname" placeholder="Vorname" required />
                     <input class="form-control mb-2 street" type="text" name="street" placeholder="Straße" required />
@@ -115,7 +121,7 @@
     </div>
 </form>
 
-<!-- Delete Customer Modal-->
+{{!-- delte customer --}}
 <form id="add-row-form" action="/delete" method="post">
     <div class="modal fade" id="DeleteModal" tabindex="-1" role="dialog">
         <div class="modal-dialog">
@@ -146,6 +152,7 @@
         //showing data to modal for edit record
         $('#datatable').on('click', '.editBtn', function () {
             var id = $(this).data('id');
+            var company = $(this).data('company');
             var surname = $(this).data('surname');
             var firstname = $(this).data('firstname');
             var zipcode = $(this).data('zipcode');
@@ -153,6 +160,7 @@
             var street = $(this).data('street');
             var housenum = $(this).data('housenum');
             $('#EditModal').modal('show');
+            $('.company').val(company);
             $('.surname').val(surname);
             $('.firstname').val(firstname);
             $('.zipcode').val(zipcode);
