--- a/views/testdata.hbs
+++ b/views/testdata.hbs
@@ -1,3 +1,3 @@
-<form action="/fakeData" method="post">
+<form action="/testdata" method="post">
     <input type="submit" name="Testdaten eintragen" value="Testdaten eintragen" />
 </form>
